# core

./: CONTRIBUTING.md  CORE_NEXT_STEPS_v1.1.md  CORE_V0.2.1_RUSTFMT_RESTORE.md  CORE_V0.2.2_STORAGE_EXPORT_FIX.md  CORE_V0.3.0_CHANGELOG.md  CORE_V0.3.1_COMPILE_FIX.md  CORE_V0.4.0_CHANGELOG.md  CORE_V0.5.0_CHANGELOG.md  CORE_V0.6.0_CHANGELOG.md  CORE_V0.6.1_REVIEW_INTAKE.md  CORE_V0.6.2_EXTERNAL_REVIEW_OPS.md  CORE_V0.6.3_REVIEWER_OUTREACH.md  CORE_V0.7.0_CHANGELOG.md  CORE_V0.8.0_CHANGELOG.md  CORE_V0.9.0_CHANGELOG.md  CORE_V1.0.0_CHANGELOG.md  CORE_V1.1.0_CHANGELOG.md  CORE_V1.2.0_CHANGELOG.md  CORE_V1.3.0_CHANGELOG.md  Cargo.toml  LICENSE  LOCAL_VERIFICATION.md  README.md  RELEASE_NOTES_v0.1.0-alpha.md  REPO_SETTINGS_CHECKLIST.md  SECURITY.md  UPLOAD_STEPS.md
.github/workflows/: rust-ci.yml
crates/proofmoney-cli/: Cargo.toml
crates/proofmoney-cli/src/: main.rs
crates/proofmoney-cli/src/commands/: ledger.rs  local_state.rs  mod.rs  proof_api.rs  release.rs  starting_state.rs  status.rs  transfer.rs  verify.rs  wallet.rs
crates/proofmoney-cli/tests/: cli_integration.rs
crates/proofmoney-crypto/: Cargo.toml
crates/proofmoney-crypto/src/: address.rs  hash.rs  keys.rs  lib.rs  signature.rs
crates/proofmoney-ledger/: Cargo.toml
crates/proofmoney-ledger/src/: ledger.rs  lib.rs  starting_state.rs  transition.rs
crates/proofmoney-ledger/tests/: internal_review_negative.rs
crates/proofmoney-node/: Cargo.toml  README.md
crates/proofmoney-node/src/: api.rs  config.rs  lib.rs  server.rs  service.rs
crates/proofmoney-proof/: Cargo.toml
crates/proofmoney-proof/src/: flow.rs  issuance.rs  lib.rs  ownership.rs  rule.rs  status.rs  supply.rs
crates/proofmoney-release/: Cargo.toml
crates/proofmoney-release/src/: curve.rs  lib.rs  release_event.rs  validation.rs
crates/proofmoney-storage/: Cargo.toml
crates/proofmoney-storage/src/: json_store.rs  ledger_store.rs  lib.rs  paths.rs
crates/proofmoney-types/: Cargo.toml
crates/proofmoney-types/src/: amount.rs  error.rs  event.rs  ledger.rs  lib.rs  proof.rs  rule.rs  transfer.rs
crates/proofmoney-types/tests/: amount_negative.rs
crates/proofmoney-wallet/: Cargo.toml
crates/proofmoney-wallet/src/: address.rs  keystore.rs  lib.rs  signing.rs  wallet.rs
docs/: architecture-overview.md  cli-integration-hardening.md  cli.md  core-documentation-index-v1.0.0.md  developer-quickstart.md  external-review-index.md  external-review-launch-checklist.md  external-review-status.md  first-review-batch-plan.md  github-discussion-external-review-announcement.md  github-review-labels.md  internal-review-amount-model.md  internal-review-docs-safety-wording.md  internal-review-event-hashing-ledger.md  internal-review-findings.md  internal-review-index.md  internal-review-proof-export.md  internal-review-proof-of-flow.md  internal-review-summary.md  internal-review-wallet-ownership.md  local-mvp-baseline-v1.0.0.md  local-mvp-command-reference-v1.0.0.md  local-mvp-demo-guide-v1.0.0.md  local-mvp-public-summary-v1.0.0.md  local-mvp-release-history-v1.0.0.md  local-mvp-risk-and-limitations-v1.0.0.md  local-state-validation.md  mvp-limitations.md  mvp-scope-freeze.md  negative-test-coverage.md  outreach-message-templates.md  ownership-and-flow.md  proof-explorer-api.md  proof-export-freshness.md  public-developer-announcement-draft.md  review-amount-model.md  review-event-hashing-ledger.md  review-intake-process.md  review-proof-export-explorer.md  review-proof-of-flow-balance.md  (+8 more)
docs/specs/: amount-model-v0.1.md  event-schema-v0.1.md  local-ledger-state-v0.1.md  proof-export-json-v0.1.md  proof-release-curve-v0.1.md  proof-result-schema-v0.1.md  protocol-spec-index-v0.1.md  wallet-ownership-safety-v0.1.md
docs/testnet/: testnet-design-index-v1.1.0.md  testnet-explorer-requirements-v1.1.0.md  testnet-faucet-boundary-v1.1.0.md  testnet-goals-and-scope-v1.1.0.md  testnet-ledger-sync-model-v1.1.0.md  testnet-network-message-model-v1.1.0.md  testnet-node-api-v1.2.0.md  testnet-node-architecture-v1.1.0.md  testnet-read-api-server-v1.3.0.md  testnet-wallet-safety-policy-v1.1.0.md
explorer/: README.md  index.html  styles.css
fixtures/: README.md  integrity-status.sample.json  ledger-status.sample.json  proof-snapshot.sample.json  release-events.sample.json  rule.sample.json  starting-state.sample.json  supply.sample.json  transfer-events.sample.json
scripts/: demo-local.sh  demo-transfer-local.sh
tests/: release_tests.rs  rule_tests.rs  starting_state_tests.rs
