[workspace]
members = [
  "crates/proofmoney-cli",
  "crates/proofmoney-types",
  "crates/proofmoney-crypto",
  "crates/proofmoney-ledger",
  "crates/proofmoney-release",
  "crates/proofmoney-proof",
  "crates/proofmoney-wallet",
  "crates/proofmoney-storage"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Vingen Motoki"]
description = "ProofMoney local MVP prototype for verifiable money integrity."
repository = "https://github.com/proofmoney-protocol/core"
homepage = "https://proofmoney.org"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
bech32 = "0.11"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
