[workspace]
resolver = "2"
members = [
    "crates/proofmoney-types",
    "crates/proofmoney-crypto",
    "crates/proofmoney-release",
    "crates/proofmoney-storage",
    "crates/proofmoney-ledger",
    "crates/proofmoney-wallet",
    "crates/proofmoney-proof",
    "crates/proofmoney-cli",
    "crates/proofmoney-node",
]
