[workspace]
resolver = "2"
members = [
    "crates/proofmoney-types",
    "crates/proofmoney-crypto",
    "crates/proofmoney-release",
    "crates/proofmoney-storage",
    "crates/proofmoney-ledger",
    "crates/proofmoney-wallet",
    "crates/proofmoney-proof",
    "crates/proofmoney-cli",
    "crates/proofmoney-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/proofmoney-protocol/core"
authors = ["Vingen Motoki"]

[workspace.dependencies]
anyhow = "1"
bech32 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
