[package]
name = "proofmoney-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cryptographic utilities for ProofMoney."

[dependencies]
anyhow.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
bech32.workspace = true
hex.workspace = true
