[package]
name = "proofmoney-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local JSON storage for ProofMoney MVP."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

proofmoney-types = { path = "../proofmoney-types" }
