[package]
name = "proofmoney-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local wallet model for ProofMoney MVP."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true

proofmoney-crypto = { path = "../proofmoney-crypto" }
